--- a/src/globals.scss
+++ b/src/globals.scss
@@ -27,10 +27,10 @@ $color-grey: #c4c4c4;
 $height-header-small: 85px;
 $height-header-big: 105px;
 
-@mixin default-wrapper-width($maxwidth: $max-screen-width) {
+@mixin default-wrapper-width() {
   margin-left: auto;
   margin-right: auto;
-  max-width: $maxwidth;
+  max-width: $max-screen-width;
   width: $small-screen-inner-width;
 
   @media #{$medium-and-up} {
