--- a/src/routes/home/Home/Home.scss
+++ b/src/routes/home/Home/Home.scss
@@ -67,9 +67,16 @@
 }
 
 .home__grid__inner {
+  @include default-wrapper-width();
   display: flex;
   flex-wrap: wrap;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: $max-screen-width;
+
+  @media #{$medium-and-up} {
+    width: calc(#{$medium-and-up-inner-width} + 24px);
+  }
+
+  @media #{$large-and-up} {
+    max-width: calc(#{$max-screen-width} + 40px);
+    width: calc(#{$medium-and-up-inner-width} + 40px);
+  }
 }
